@@ -2,6 +2,15 @@
 
         Reviewed by Pavel Feldman.
 
+        [Regression] monitorEvent doesn't work
+
+        * inspector/front-end/InjectedScript.js:
+        (InjectedScript._ensureCommandLineAPIInstalled):
+
+2009-11-01  Keishi Hattori  <casey.hattori@gmail.com>
+
+        Reviewed by Pavel Feldman.
+
         Fix Web Inspector: Bug with Message Bubble in Syntax Highlighter
         https://bugs.webkit.org/show_bug.cgi?id=30990
 
